# mall-sim

./: .editorconfig  .gitattributes  .gitignore  .gutconfig.json  AIDLC_FUTURES.md  ARCHITECTURE.md  BETA_IMPLEMENTATION_PLAN.md  BRAINDUMP.md  BRIANDUMP.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  TASKLIST.md  TECH_STACK.md  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot
.aidlc/: config.json
tools/aidlc/: .gitignore  ARCHITECTURE.md  README.md  USAGE.md  __init__.py  __main__.py  apply.py  claude_cli.py  config.py  frontier.py  logger.py  models.py  prompt_builder.py  pyproject.toml  reporting.py  runner.py  schemas.py  scope_guard.py  state_manager.py  validators.py
tools/aidlc/.aidlc/: config.json
tools/aidlc/aidlc/: __init__.py  __main__.py  audit_models.py  audit_schemas.py  auditor.py  claude_cli.py  config.py  implementer.py  logger.py  models.py  planner.py  precheck.py  reporting.py  runner.py  scanner.py  schemas.py  state_manager.py
tools/aidlc/aidlc/configs/: default.json  quick_smoke.json
tools/aidlc/aidlc/project_template/: ARCHITECTURE.md  DESIGN.md  README.md  TEMPLATE_GUIDE.md
tools/aidlc/configs/: mall_sim_planning_40h.json  mall_sim_planning_smoke.json  mall_sim_planning_soak.json
tools/aidlc/project_template/: CLAUDE.md  ROADMAP.md  STATUS.md
tools/aidlc/templates/: work_issue.md
tools/aidlc/tests/: test_auditor.py  test_claude_cli.py  test_config.py  test_implementer.py  test_implementer_extended.py  test_logger.py  test_main.py  test_models.py  test_planner.py  test_planner_extended.py  test_precheck.py  test_reporting.py  test_runner.py  test_runner_extended.py  test_scanner.py  test_schemas.py  test_state_manager.py
(+2905 files in other folders)
