[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidlc"
version = "0.1.0"
description = "AI Development Life Cycle — autonomous planning and implementation framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "highlyprofitable108"},
]
keywords = ["ai", "development", "lifecycle", "automation", "claude", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/highlyprofitable108/aidlc"
Repository = "https://github.com/highlyprofitable108/aidlc"
Issues = "https://github.com/highlyprofitable108/aidlc/issues"

[project.scripts]
aidlc = "aidlc.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["aidlc*"]

[tool.setuptools.package-data]
aidlc = [
    "configs/*.json",
    "project_template/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["aidlc"]
omit = ["aidlc/configs/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
